<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/api"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/btn_api"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:textSize="13sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            tools:ignore="UnusedAttribute"
            android:text="@string/btn_api"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/btn_repo"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:textSize="13sp"
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            tools:ignore="UnusedAttribute"
            android:text="@string/btn_repo"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/btn_contact"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:textSize="13sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            tools:ignore="UnusedAttribute"
            android:text="@string/contact"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</LinearLayout>